# python-sudoers

./: .bumpversion.cfg  .containerignore  .github_changelog_generator  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Containerfile  Dockerfile  Makefile  Pipfile  README.md  catalog-info.yaml  codecov.yml  dev.sh  mkdocs.yaml  mkdocs.yml  pyproject.toml  setup.py
.circleci/: config.yml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: checks.yaml  deploy.yaml  pr-checks.yaml  test_deploy.yaml
docs/: README.md
pysudoers/: __init__.py
tests/: test_sudoers.py
tests/data/: bad_alias1.txt  bad_alias2.txt  bad_rule.txt  correct.txt  dup_alias.txt
