[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pysudoers"
version = "2.1.0"
description = "Python interface to the Linux sudoers file"
license = "BSD-3-Clause"
authors = ["Andrew Teixeira <teixeira@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/python-sudoers.git"
homepage = "https://github.com/broadinstitute/python-sudoers.git"
keywords = ["linux", "sudoers"]

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here

toml = ">=0.9,<0.11"

[tool.poetry.dev-dependencies]
bump2version = "*"
codecov = "*"
coverage = ">=4.4.2"
fixtures = "*"
green = ">=2.12.0"
mock = ">=2.0.0"
pydocstyle = "<7"
pylama = "*"
pylint = "*"
testtools = "*"
twine = "*"
unittest2 = ">=1.1.0"
wheel = "*"
yamllint = "*"
