[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pysudoers"
version = "2.2.0"
description = "Python interface to the Linux sudoers file"
license = "BSD-3-Clause"
authors = ["Andrew Teixeira <teixeira@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/python-sudoers.git"
homepage = "https://github.com/broadinstitute/python-sudoers.git"
keywords = ["linux", "sudoers"]

[tool.poetry.dependencies]
python = "^3.9"  # Compatible python versions must be declared here

toml = "^0.10.2"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
coverage = "^7.6.4"
green = "^4.0.0"
mock = "^5.1.0"
pydocstyle = "^6.3.0"
pylama = "^8.4.1"
pylint = "^3.3.1"
testtools = "^2.7.2"
unittest2 = "^1.1.0"
yamllint = "^1.35.1"
